# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2

* baselayout-1.12.0_pre2 (22 Jul 2005)

  22 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    When a service is stopped, the IN_BACKGROUND variable is cleared
    before any dependencies are stopped so they are not marked inactive.
    The IN_BACKGROUND variable is then restored so the parent script can be
    marked inactive.

  21 Jul 2005; Mike Frysinger <vapier@gentoo.org>:

    Change the -l option to tar to --one-file-system #99775.

    Add a --debug option to depscan.sh.

  21 Jul 2005; Martin Schlemmer <azarah@gentoo.org>:

    Fix hangs in bootup, bug #99663.

  21 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    dhclient now sets the hostname correctly.

    Fixed some start/stop/restart logic for #99663.

    Stopped rc-status from checking failed and broken which no longer apply.

  20 Jul 2005; Mike Frysinger <vapier@gentoo.org>:

    Make sure the X11 dirs are always created in /tmp #99679 by Marc Ballarin.

  20 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    Fixed <wpa_supplicant-0.4 support

    Removed trailing tab from local.start - fixes #99624

    Moved RC_AUTO_INTERFACE definition to /etc/conf.d/rc

  19 Jul 2005; Mike Frysinger <vapier@gentoo.org>:

    Punt the cyrus/mysql/slocate/vpopmail users/groups to the 
    respective ebuilds.

    Removed trailing tab from local.start - fixes #99624

  19 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    ${ESSID} and ${ESSIDVAR} are now available in predown() - fixes #99106

  18 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    Changed wpa-supplicant to wpa_supplicant when reporting that it is not
    installed. Fixes #99381

    Fixed some startup problems caused by a mixture of inactive +
    begin_service/end_service functions.

  16 Jul 2005; Martin Schlemmer <azarah@gentoo.org>:

    Add Darwin support for start-stop-daemon, bug #82421.
